packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_transform_loop_multiple_handler_with_different_captures.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 5721
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const arr = useSignal(['a', 'b']);
  return (
    <div>
      {arr.value.map((val, i) => {
        const plusOne = i + 1;
        const plusTwo = i + 2;
        const double = i * 2;
        return (
          <div
            onClick$={() => console.log(plusOne, double)}
            onKeyDown$={() => console.log(plusTwo, double)}
          >
            {val}
          </div>
        );
      })}
    </div>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(_qrl_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,6BAAe,8CAmBZ\"}")
============================= test.tsx_test_component_div_div_q_e_keydown_a6RR59yQlXM.js (ENTRY POINT)==

export const test_component_div_div_q_e_keydown_a6RR59yQlXM = (_, _1, _2, plusTwo, double)=>console.log(plusTwo, double);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"8DAcwB,YALV,SACA,SAIgB,QAAQ,GAAG,CAAC,SAAS\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_q_e_keydown_a6RR59yQlXM",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_q_e_keydown",
  "hash": "a6RR59yQlXM",
  "canonicalFilename": "test.tsx_test_component_div_div_q_e_keydown_a6RR59yQlXM",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onKeyDown$",
  "captures": false,
  "loc": [
    392,
    426
  ],
  "paramNames": [
    "_",
    "_1",
    "_2",
    "plusTwo",
    "double"
  ]
}
*/
============================= test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps.js (ENTRY POINT)==

export const test_component_div_div_q_e_click_Mc600uqO6ps = (_, _1, plusOne, _3, double)=>console.log(plusOne, double);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"4DAasB,QALR,aAEA,SAGc,QAAQ,GAAG,CAAC,SAAS\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_q_e_click_Mc600uqO6ps",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_q_e_click",
  "hash": "Mc600uqO6ps",
  "canonicalFilename": "test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    332,
    366
  ],
  "paramNames": [
    "_",
    "_1",
    "plusOne",
    "_3",
    "double"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const _qrl_test_component_div_div_q_e_click_Mc600uqO6ps = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps"), "test_component_div_div_q_e_click_Mc600uqO6ps");
const _qrl_test_component_div_div_q_e_keydown_a6RR59yQlXM = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_q_e_keydown_a6RR59yQlXM"), "test_component_div_div_q_e_keydown_a6RR59yQlXM");
//
export const test_component_LUXeXe0DQrg = ()=>{
    const arr = useSignal([
        'a',
        'b'
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, arr.value.map((val, i)=>{
        const plusOne = i + 1;
        const plusTwo = i + 2;
        const double = i * 2;
        return /*#__PURE__*/ _jsxSorted("div", {
            "q-e:click": _qrl_test_component_div_div_q_e_click_Mc600uqO6ps,
            "q-e:keydown": _qrl_test_component_div_div_q_e_keydown_a6RR59yQlXM,
            "q:ps": [
                plusOne,
                plusTwo,
                double
            ]
        }, null, val, 0, "u6_0");
    }), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;0CAG0B;IACxB,MAAM,MAAM,UAAU;QAAC;QAAK;KAAI;IAChC,qBACE,WAAC,mBACE,IAAI,KAAK,CAAC,GAAG,CAAC,CAAC,KAAK;QACnB,MAAM,UAAU,IAAI;QACpB,MAAM,UAAU,IAAI;QACpB,MAAM,SAAS,IAAI;QACnB,qBACE,WAAC;YACC,WAAQ;YACR,aAAU;;gBANR;gBACA;gBACA;;iBAMD;IAGP;AAGN\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    513
  ]
}
*/
== DIAGNOSTICS ==

[]
